--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='utf-8'>
 <meta http-equiv='x-ua-compatible'  content='ie=edge'>
-<title> titulo da aba</title>
+<title> calistenia</title>
 <meta name='viewport'content= 'width=device-width,initial-scale=1'>
 <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 <script src="main.js"></script>
@@ -12,14 +12,14 @@
 <header><p><img id="VITT" src="FORSVA.png" alt="DESCRICAO IMAGEM"></p>
 </header>
 <main>
-<h9>TITULO DA PAGINA</h1>
+<h9>CALISTENIA JC</h1>
 <div class="PRIMEIROPARAGRAFO">
 <h3>TITULO DO TEXTO 01</h3>
-<p><i><b>TEXTO DESCRITIVO 01</b></i></p>
+<p><i><b> calistenia é um tipo de treinamento que utiliza o peso do próprio corpo e que tem como objetivo trabalhar a força e resistência muscular, não sendo necessário usar equipamentos de academia.</b></i></p>
 <ul id="lista">
-<li>ITEM 01</li>
-<li>ITEM 02</li>
-<li>ITEM 03</li>
+<li>A modalidade promete trabalhar exercícios de força, estabilidade, resistência, coordenação</li>
+<li>Quanto tempo de calistenia por dia? Faça pelo menos de 30 a 50 minutos de exercícios diariamente e deixe pelo menos um dia para descanso.</li>
+<li>a calistenia jc ficara aberta todos os dias com exeção de domingo,fassa sua incrição</li>
 </ul>
 </div> 
 <h1>***</h1>
