--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <script src="main.js"></script>
 </head>
 <body>
-<header><p><img id="VITT" src="FORSVA.png" alt="DESCRICAO IMAGEM"></p>
+<header><p><img id="VITT" src="FORSVA.png" alt=""></p>
 </header>
 <main>
 <h9>CALISTENIA JC</h1>
 <div class="PRIMEIROPARAGRAFO">
-<h3>TITULO DO TEXTO 01</h3>
+<h3>instruçoes da calistenia jc</h3>
 <p><i><b> calistenia é um tipo de treinamento que utiliza o peso do próprio corpo e que tem como objetivo trabalhar a força e resistência muscular, não sendo necessário usar equipamentos de academia.</b></i></p>
 <ul id="lista">
 <li>A modalidade promete trabalhar exercícios de força, estabilidade, resistência, coordenação</li>
