--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="main.js"></script>
 </head>
 <body>
-<header><p><img id="VITT" src="FORSVA.png" alt=""></p>
+<header><p><img id="VITT" src=calistenia-crossfit-4-1024x1024.jpg" alt=""></p>
 </header>
 <main>
 <h9>CALISTENIA JC</h1>
